# datalens

./: .env.example  .gitignore  README.md
.agent/skills/documentation-and-adrs/: SKILL.md
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: datasets.py  llm.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/data/: datalens.db
backend/tests/: test_api.py  test_endpoints.py
docs/: report.md
docs/adrs/: 001-llm-provider.md  002-sqlite-schema.md  003-tool-use-pattern.md  README.md
frontend/: eslint.config.js  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatPanel.jsx  Dashboard.jsx  FilterPanel.jsx  Summary.jsx  Upload.jsx
frontend/src/tests/: FilterPanel.test.jsx  app.test.jsx  components.test.jsx
tasks/: plan.md  todo.md
