[project]
name = "datalens-backend"
version = "0.1.0"
description = "FastAPI backend for DataLens CSV analytics dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pandas>=2.2.0",
  "sqlalchemy>=2.0.0",
  "aiosqlite>=0.20.0",
  "python-multipart>=0.0.9",
  "openai>=1.40.0",
  "pydantic-settings>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]
